# NLP-algorithm

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  root.py
bert-multiple-emotion-classify/: LICENSE  README.md  config.py  infer_api.py  requirements.txt
bert-multiple-emotion-classify/dataset_formator/: CSV_Dataset.py  TextClassifyDataSet.py  __init__.py
bert-multiple-emotion-classify/model/: BertClassifier.py
bert-multiple-emotion-classify/pretreatment_script/: _OCEMOTION.py
bert-multiple-emotion-classify/test/: backup.py  demo.py  eval.py  infer_demo.py  post_infer_api_script.py  train_demo.py
bert-multiple-emotion-classify/type/: __init__.py  data_interface.py  label.py
crawler/: blog.py  comment.py  index.py
crawler/weibo-crawler/: comment crawler.py  comment_crawler.py  comments-crawler_random.py  comments-crawler_random（仅针对去年的评论）.py
crawler/weibo-search/: README.md
crawler/weibo_comment_crawler/: comment_crawler.py  comments-crawler_random.py
dao/: __init__.py  weibo_blog_comment_dao.py  weibo_blog_dao.py  weibo_comment_dao.py
data/: 事件.csv  合并数据.csv  合并数据.xlsx  新闻.csv  舆论.csv
data_models/topic/: topic_weibo_blog.py
models/: weibo_blog.py  weibo_comment.py
orm/: client.py
routes/: data.py  index.py  topic.py
server/routes/: __init__.py  data.py
service/: crawler.py
service/api/: weibo_blog.py  weibo_blog_comment.py  weibo_comment.py
topic/BERTopic/: README.md  bertopic_clustering.py  data_preprocessor.py  example_usage.py  run_cluster.py  run_cluster_local.py  simple_local_test.py  test_basic.py  test_local_model.py
topic/LDA/: LDA+超参.py  LDA.py  excel转txt copy.py  lda_.py  qx.txt  qx_分词结果.txt  test_debug.py  分词处理.py
utils/: filter_params.py  paginator.py  statusCode.py
(+16 files in other folders)
