[project]
name = "nlp-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.0.0",
    "fastapi>=0.115.0",
    "jieba>=0.42.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "transformers>=4.37.0",
    "gensim",
    "xlwt>=1.3.0",
    "xlrd>=2.0.2",
    "pandas>=2.3.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
