[project]
name = "nlp-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.0.0",
    "fastapi>=0.115.0",
    "jieba>=0.42.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "transformers>=4.37.0",
    "matplotlib",
    "xlwt>=1.3.0",
    "xlrd>=2.0.2",
    "pandas>=2.3.3",
    "scrapy>=2.13.4",
    "openpyxl>=3.1.5",
    "pyLDAvis",
    "uvicorn>=0.40.0",
    "psutil>=7.2.1",
    "torch",
    "torchvision",
    "gensim>=4.4.0",
]

[tool.uv.sources]
torch = [
#  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
]
torchvision = [
#  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
